--- a/DataBaseSubsystem/APS.DBS.Domain/APS.DBS.Domain.csproj
+++ b/DataBaseSubsystem/APS.DBS.Domain/APS.DBS.Domain.csproj
@@ -8,4 +8,8 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.11" />
+  </ItemGroup>
+
 </Project>
