--- a/DataBaseSubsystem/APS.DBS.Infrastructure/APS.DBS.Infrastructure.csproj
+++ b/DataBaseSubsystem/APS.DBS.Infrastructure/APS.DBS.Infrastructure.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\APS.DBS.Domain\APS.DBS.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
