--- a/Web/APS.Web.MVC/appsettings.json
+++ b/Web/APS.Web.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DbContext;Trusted_Connection=True;"
+    "DefaultConnection": ":memory:" //"Server=(localdb)\\mssqllocaldb;Database=DbContext;Trusted_Connection=True;"
   },
     "Logging": {
       "LogLevel": {
