--- a/Web/APS.Web.MVC/APS.Web.MVC.csproj
+++ b/Web/APS.Web.MVC/APS.Web.MVC.csproj
@@ -1,15 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.11" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ContentManagementSubsystem\APS.CMS.Application\APS.CMS.Application.csproj" />
     <ProjectReference Include="..\..\DataBaseSubsystem\APS.DBS.Infrastructure\APS.DBS.Infrastructure.csproj" />
   </ItemGroup>
 
