--- a/ContentManagementSubsystem/APS.CMS.Application/APS.CMS.Application.csproj
+++ b/ContentManagementSubsystem/APS.CMS.Application/APS.CMS.Application.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\DataBaseSubsystem\APS.DBS.Domain\APS.DBS.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
