#6 Добавил обработчик для загрузки контента

--- a/ContentManagementSubsystem/APS.CMS.Application/APS.CMS.Application.csproj
+++ b/ContentManagementSubsystem/APS.CMS.Application/APS.CMS.Application.csproj
@@ -6,6 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\DataBaseSubsystem\APS.DBS.Domain\APS.DBS.Domain.csproj" />
   </ItemGroup>
 
 </Project>
